--- a/project/views/templates/startup-kit/body.html.twig
+++ b/project/views/templates/startup-kit/body.html.twig
@@ -10,6 +10,7 @@
         {% elseif section.type == "PromoHeadingSection" %}   {{ top.promo(section, page.slug, 'sections.' ~ key, editMode) }}
 
         {% elseif section.type == "OverviewSection" %}       {{ components.overviewSection(section, page.slug, 'sections.' ~ key, editMode) }}
+        {% elseif section.type == "FeaturePreviewSection" %} {{ components.featuresPreviewSection(section, page.slug, 'sections.' ~ key, editMode) }}
         {% elseif section.type == "FeatureBlocksSection" %}  {{ components.featureBlocksSection(section, page.slug, 'sections.' ~ key, editMode) }}
         {% elseif section.type == "PageNavSection" %}        {{ nav.pageNavSection(section, page.slug, 'sections.' ~ key, editMode) }}
 
