--- a/project/views/templates/startup-kit/components/components.html.twig
+++ b/project/views/templates/startup-kit/components/components.html.twig
@@ -89,7 +89,16 @@
                     </div>
                 </div><!--//row-->
             </div><!--//feature-block-->
-            {{ data.settingsModal(feature, slug, featurePath, { 'onTheLeft': { 'type': 'select', 'title': 'Расположение', 'options': [{value: 'image', text: 'Картинка слева'}, {value: 'text', text: 'Картинка справа'}] } }, editMode) }}
+            {{ data.settingsModal(feature, slug, featurePath, {
+                'onTheLeft': {
+                    'type': 'select',
+                    'title': 'Расположение',
+                    'options': [
+                        {value: 'image', text: 'Картинка слева'},
+                        {value: 'text', text: 'Картинка справа'}
+                    ]
+                }
+            }, editMode) }}
         {% endfor %}
 
         {{ data.addElementButton(path ~ '.features', slug, editMode, "Добавить блок с текстом и картинкой") }}
@@ -97,5 +106,115 @@
         {{ data.removeElementBigButton(path, slug, editMode, "Удалить все блоки") }}
 
     </div><!--//feature-blocks-->
+
+{% endmacro %}
+
+{% macro featuresPreviewSection(section, slug, path, editMode) %}
+
+    {% import "/data.html.twig" as data %}
+    
+    <section id="features-section" class="features-section section">
+        <h2 class="section-title">
+            {{ data.text(section.title, slug, path ~ '.title', editMode) }}{{ data.settingsButton(path, editMode) }}{{ data.removeElementButton(featurePath, slug, editMode) }}
+        </h2>
+        <div class="container">
+            <div class="row">
+                <div class="features-content-wrapper col-xs-12 col-sm-7 com-md-7">
+                    <div class="intro">
+                        {{ data.textarea(section.description, slug, path ~ '.description', editMode) }}
+                    </div><!--//intro-->
+                    <ul class="feature-list list-unstyled">
+                        <li><img class="tick-icon" src="/templates/startup-kit/images/tick.svg" alt=""> Feature one lorem ipsum dolor sit amet.</li>
+                        <li><img class="tick-icon" src="/templates/startup-kit/images/tick.svg" alt=""> Feature two lorem ipsum dolor sit amet.</li>
+                        <li><img class="tick-icon" src="/templates/startup-kit/images/tick.svg" alt=""> Feature three lorem ipsum dolor sit amet.</li>
+                        <li><img class="tick-icon" src="/templates/startup-kit/images/tick.svg" alt=""> Feature four lorem ipsum dolor sit amet.</li>
+                        <li><img class="tick-icon" src="/templates/startup-kit/images/tick.svg" alt=""> Feature five lorem ipsum dolor sit amet.</li>
+                        <li><img class="tick-icon" src="/templates/startup-kit/images/tick.svg" alt=""> Feature six lorem ipsum dolor sit amet.</li>
+                    </ul><!--//feature-list-->
+
+                    <div id="reviews-carousel" class="reviews-carousel carousel slide" data-ride="carousel">
+                        <!--//wrapper for slides -->
+                        <div class="carousel-inner" role="listbox">
+                            <div class="item active">
+                                <blockquote class="review center-block">
+                                    <i class="fa fa-quote-left" aria-hidden="true"></i>
+                                    <p>A great way to Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                                </blockquote><!--//review-->
+                                <div class="source">
+                                    <div class="rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div><!--//rating-->
+                                    <img class="profile" src="/templates/startup-kit/images/users/user-1.png" alt="" />
+                                    <div class="name">Theresa Wood, Product Hunt</div>
+                                </div><!--//source-->
+                            </div><!--//item-->
+
+                            <div class="item">
+                                <blockquote class="review center-block">
+                                    <i class="fa fa-quote-left" aria-hidden="true"></i>
+                                    <p>A great way to Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                                </blockquote><!--//review-->
+                                <div class="source">
+                                    <div class="rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div><!--//rating-->
+                                    <img class="profile" src="/templates/startup-kit/images/users/user-2.png" alt="" />
+                                    <div class="name">Rob Kim, Mashable</div>
+                                </div><!--//source-->
+                            </div><!--//item-->
+
+                            <div class="item">
+                                <blockquote class="review center-block">
+                                    <i class="fa fa-quote-left" aria-hidden="true"></i>
+                                    <p>A great way to Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+                                </blockquote><!--//review-->
+                                <div class="source">
+                                    <div class="rating">
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                        <i class="fa fa-star"></i>
+                                    </div><!--//rating-->
+                                    <img class="profile" src="/templates/startup-kit/images/users/user-3.png" alt="" />
+                                    <div class="name">Kevin Howell, Wired</div>
+                                </div><!--//source-->
+                            </div><!--//item-->
+
+                        </div><!--//carousel-inner-->
+
+                        <!--//Indicators-->
+                        <ol class="carousel-indicators">
+                            <li data-target="#reviews-carousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#reviews-carousel" data-slide-to="1"></li>
+                            <li data-target="#reviews-carousel" data-slide-to="2"></li>
+                        </ol>
+
+                    </div><!--//reviews-carousel-->
+                </div><!--//features-content-wrapper-->
+            </div><!--//row-->
+        </div><!--//container-->
+
+        <div class="features-figure-wrapper">
+            {{ data.image(section.image, slug, path ~ '.image', editMode, {class: 'img-responsive'}, "/templates/startup-kit/images/imac-screen.png") }}
+        </div><!--//features-figure-wrapper-->
+
+        <div class="action-wrapper text-center">
+            <a href="features.html" class="btn btn-secondary">View all features</a>
+        </div>
+
+        {{ data.settingsModal(sections, slug, path, {
+
+        }, editMode) }}
+
+    </section><!--//features-section-->
 
 {% endmacro %}
