--- a/project/views/templates/startup-kit/structure/head.html.twig
+++ b/project/views/templates/startup-kit/structure/head.html.twig
@@ -16,6 +16,21 @@
         <script src="/plugins/bootstrap3-editable/js/link-editable.js"></script>
         <script src="/plugins/edit-tools/edit-tools.js"></script>
         <script src="/templates/startup-kit/js/demo/style-switcher.js"></script>
+
+        <script>
+            var componentsList = {
+                'SimpleHeadingSection':  'Простая шапка сайта',
+                'PromoHeadingSection':   'Шапка (меняющийся фон, кнопка призыва)',
+
+                'PageNavSection':        'Панель навигации по странице',
+
+                'OverviewSection':       'Описание (три устройства и текст)',
+                'FeaturePreviewSection': 'Описание (одна картинка, текст и фичи)',
+                'FeatureBlocksSection':  'Список фич (картинка и текст)'
+
+            };
+        </script>
+
     {% endif %}
 
     <!-- Vimeo video API -->
