--- a/project/views/templates/startup-kit/body.html.twig
+++ b/project/views/templates/startup-kit/body.html.twig
@@ -2,6 +2,7 @@
 {% import '/templates/startup-kit/components/top.html.twig' as top %}
 {% import '/templates/startup-kit/components/components.html.twig' as components %}
 {% import '/templates/startup-kit/components/nav.html.twig' as nav %}
+{% import '/data.html.twig' as data %}
 
 {% block body %}
 
@@ -16,6 +17,14 @@
 
         {% endif %}
     {% endfor %}
+
+    {% if editMode %}
+
+        <section class="section text-center">
+            {{ data.addComponentModal(page.slug, editMode) }}
+        </section>
+
+    {% endif %}
 
 {% endblock %}
 
