--- a/project/views/templates/startup-kit/structure/head.html.twig
+++ b/project/views/templates/startup-kit/structure/head.html.twig
@@ -7,6 +7,7 @@
     {% if editMode %}
         <link href="/plugins/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet">
         <link href="/plugins/edit-tools/edit-tools.css" rel="stylesheet">
+        <link href="/plugins/slide-panel/style.css" rel="stylesheet">
     {% endif %}
 {% endblock %}
 
