Добавил настройки текущей страницы

--- a/project/views/templates/startup-kit/structure/base.html.twig
+++ b/project/views/templates/startup-kit/structure/base.html.twig
@@ -35,7 +35,7 @@
 <div class="message">
     <label id="settings-label" class="btn" for="toggle">Параметры страницы</label>
     <h1>Параметры страницы</h1>
-    <h2>Title {{ data.text(page.title, slug, 'page.title', editMode) }}</h2>
+    <h2>Title {{ data.text(page.title, slug, 'title', editMode) }}</h2>
 </div>
 
 <!-- ******HEADER****** -->
