--- a/project/views/templates/startup-kit/body.html.twig
+++ b/project/views/templates/startup-kit/body.html.twig
@@ -2,9 +2,12 @@
 {% import '/templates/startup-kit/components/top.html.twig' as top %}
 {% import '/templates/startup-kit/components/components.html.twig' as components %}
 {% import '/templates/startup-kit/components/nav.html.twig' as nav %}
+{% import '/templates/startup-kit/components/admin.html.twig' as admin %}
 {% import '/data.html.twig' as data %}
 
 {% block body %}
+
+    {{ admin.pageProperties(page, slug, editMode) }}
 
     {% for key, section in page.sections %}
         {% if     section.type == "SimpleHeadingSection" %}  {{ top.simple(section, page.slug, 'sections.' ~ key, editMode) }}
