--- a/project/views/admin.html.twig
+++ b/project/views/admin.html.twig
@@ -9,10 +9,8 @@
 
 {% block body %}
 
-    {% if editMode %}
-        {{ admin.adminPanel() }}
-    {% else %}
-        {{ admin.loginForm() }}
-    {% endif %}
+    <div style="margin-top: 150px; margin-bottom: 50px;">
+        {{ admin.admin(editMode) }}
+    </div>
 
 {% endblock %}
