--- a/project/views/templates/startup-kit/components/admin.html.twig
+++ b/project/views/templates/startup-kit/components/admin.html.twig
@@ -15,12 +15,37 @@
 
 {% macro loginForm() %}
 
-    <div class="container" style="margin-top: 180px;">
+    <div class="container">
+
         <div class="row">
-            <div class="col-sm-12">
-                Панель авторизации
+
+            <div class="col-sm-offset-3 col-md-offset-4 col-sm-6 col-md-4">
+
+                <div class="title"><span>Вход в админку</span></div>
+
+                <form action="" method="post">
+
+                    <div class="form-group">
+                        <label for="username">Имя пользователя</label>
+                        <input type="text" id="username" name="username" class="form-control" autofocus/>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="password">Пароль</label>
+                        <input type="password" id="password" name="password" class="form-control"/>
+                    </div>
+
+                    <button type="submit" class="btn btn-theme">
+                        <i class="fa fa-long-arrow-right"></i>
+                        Войти
+                    </button>
+
+                </form>
+
             </div>
+
         </div>
+
     </div>
 
 {% endmacro %}
@@ -34,5 +59,17 @@
             </div>
         </div>
     </div>
+
+{% endmacro %}
+
+{% macro admin(editMode) %}
+
+    {% import _self as admin %}
+
+    {% if editMode %}
+        {{ admin.adminPanel() }}
+    {% else %}
+        {{ admin.loginForm() }}
+    {% endif %}
 
 {% endmacro %}
