--- a/project/views/templates/startup-kit/body.html.twig
+++ b/project/views/templates/startup-kit/body.html.twig
@@ -3,7 +3,7 @@
 {% import '/templates/startup-kit/components/components.html.twig' as components %}
 {% import '/templates/startup-kit/components/nav.html.twig' as nav %}
 {% import '/templates/startup-kit/components/admin.html.twig' as admin %}
-{% import '/data.html.twig' as data %}
+{% import '/common/data.html.twig' as data %}
 
 {% block body %}
 
