Распределил шаблоны и вызовы

--- a/project/views/common/components/admin.html.twig
+++ b/project/views/common/components/admin.html.twig
@@ -1,6 +1,6 @@
 {% macro pageProperties(page, slug, editMode) %}
 
-    {% import "/common/data.html.twig" as data %}
+    {% import "/common/components/data.html.twig" as data %}
 
     {% if editMode %}
         <input type="checkbox" name="toggle" id="toggle" />
