--- a/project/views/templates/startup-kit/components/components.html.twig
+++ b/project/views/templates/startup-kit/components/components.html.twig
@@ -2,7 +2,7 @@
 
 {% macro overviewSection(sectionData, slug, path, editMode) %}
 
-    {% import "/common/data.html.twig" as data %}
+    {% import "/common/components/data.html.twig" as data %}
 
     <section id="overview-section" class="overview-section section">
         <h2 class="section-title">
@@ -68,7 +68,7 @@
 
 {% macro featureBlocksSection(sectionData, slug, path, editMode) %}
 
-    {% import "/common/data.html.twig" as data %}
+    {% import "/common/components/data.html.twig" as data %}
 
     <div class="feature-blocks container">
 
@@ -111,7 +111,7 @@
 
 {% macro featuresPreviewSection(section, slug, path, editMode) %}
 
-    {% import "/common/data.html.twig" as data %}
+    {% import "/common/components/data.html.twig" as data %}
     
     <section id="features-section" class="features-section section">
         <h2 class="section-title">
