--- a/project/views/templates/startup-kit/body.html.twig
+++ b/project/views/templates/startup-kit/body.html.twig
@@ -2,8 +2,8 @@
 {% import '/templates/startup-kit/components/top.html.twig' as top %}
 {% import '/templates/startup-kit/components/components.html.twig' as components %}
 {% import '/templates/startup-kit/components/nav.html.twig' as nav %}
-{% import '/templates/startup-kit/components/admin.html.twig' as admin %}
-{% import '/common/data.html.twig' as data %}
+{% import '/common/components/admin.html.twig' as admin %}
+{% import '/common/components/data.html.twig' as data %}
 
 {% block body %}
 
