--- a/project/views/templates/startup-kit/components/nav.html.twig
+++ b/project/views/templates/startup-kit/components/nav.html.twig
@@ -1,6 +1,6 @@
 {% macro pageNavSection(sectionData, slug, path, editMode) %}
 
-    {% import "/common/data.html.twig" as data %}
+    {% import "/common/components/data.html.twig" as data %}
 
     <div class="page-nav-space-holder hidden-xs">
         <div id="page-nav-wrapper" class="page-nav-wrapper text-center">
