--- a/project/views/templates/startup-kit/components/top.html.twig
+++ b/project/views/templates/startup-kit/components/top.html.twig
@@ -38,7 +38,7 @@
 
 {% macro promo(sectionData, slug, path, editMode) %}
 
-    {% import "/common/data.html.twig" as data %}
+    {% import "/common/components/data.html.twig" as data %}
 
     <section class="promo-section section section-on-bg">
         <div class="hero-slider-wrapper">
@@ -206,7 +206,7 @@
 
 {% macro simple(sectionData, slug, path, editMode) %}
 
-    {% import "/common/data.html.twig" as data %}
+    {% import "/common/components/data.html.twig" as data %}
 
     <section class="career-page heading-section section section-on-bg">
         <div class="hero-wrapper">
