--- a/project/views/templates/startup-kit/structure/head.html.twig
+++ b/project/views/templates/startup-kit/structure/head.html.twig
@@ -1,5 +1,5 @@
 {% extends '/templates/startup-kit/structure/base.html.twig' %}
-{% import "/common/data.html.twig" as data %}
+{% import "/common/components/data.html.twig" as data %}
 
 {% set pageTitle %}{{ page.title | raw }}{% endset %}
 
