--- a/project/views/common/components/admin.html.twig
+++ b/project/views/common/components/admin.html.twig
@@ -50,24 +50,54 @@
 
 {% endmacro %}
 
-{% macro adminPanel() %}
+{% macro adminPanel(pages) %}
+
+    {% set editMode = true %}
+
+    {% import "/common/components/data.html.twig" as data %}
 
     <div class="container" style="margin-top: 180px;">
         <div class="row">
             <div class="col-sm-12">
-                Тут будет админка
+
+                <table class="table table-hover">
+                    <caption>Страницы сайта</caption>
+                    <thead class="hidden-sm hidden-xs">
+                        <tr>
+                            <th>
+                                <div class="row">
+                                    <div class="col-md-6">URI</div>
+                                    <div class="col-md-6">Заголовок</div>
+                                </div>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for page in pages %}
+                        <tr>
+                            <td>
+                                <div class="row">
+                                    <div class="col-md-6">{{ data.text(page.slug, page.slug, 'slug', editMode) }}</div>
+                                    <div class="col-md-6">{{ data.text(page.title, page.slug, 'title', editMode) }}</div>
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+
             </div>
         </div>
     </div>
 
 {% endmacro %}
 
-{% macro admin(editMode) %}
+{% macro admin(editMode, pages = []) %}
 
     {% import _self as admin %}
 
     {% if editMode %}
-        {{ admin.adminPanel() }}
+        {{ admin.adminPanel(pages) }}
     {% else %}
         {{ admin.loginForm() }}
     {% endif %}
