--- a/project/views/templates/startup-kit/admin.html.twig
+++ b/project/views/templates/startup-kit/admin.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div style="margin-top: 150px; margin-bottom: 50px;">
-        {{ admin.admin(editMode) }}
+        {{ admin.admin(editMode, pages) }}
     </div>
 
 {% endblock %}
