Сделал редактирование страниц

--- a/project/views/common/components/admin.html.twig
+++ b/project/views/common/components/admin.html.twig
@@ -77,7 +77,7 @@
                         <tr>
                             <td>
                                 <div class="row">
-                                    <div class="col-md-6">{{ data.text(page.slug, page.slug, 'slug', editMode) }}</div>
+                                    <div class="col-md-6">{{ data.text(page.slug, page.slug, 'slug', editMode) }} <a href="/{{ page.slug }}">ссылка</a></div>
                                     <div class="col-md-6">{{ data.text(page.title, page.slug, 'title', editMode) }}</div>
                                 </div>
                             </td>
